--- a/styles.css
+++ b/styles.css
@@ -15,3 +15,11 @@ body {
     background-color: rgb(37, 0, 0);
     color: aliceblue;
 }
+
+.col {
+    display: flex;
+}
+
+.leftside, .rightside {
+    width: 100%;
+}
